--- a/package.json
+++ b/package.json
@@ -22,6 +22,14 @@
     "expo": "^26.0.0",
     "react": "16.3.0",
     "react-native": "~0.54.1",
+    "react-native-elements": "^0.19.1",
+    "react-native-pie-chart": "^1.0.13",
+    "react-native-svg-charts": "^5.0.0",
     "react-navigation": "^1.5.11"
+  },
+  "rnpm": {
+    "assets": [
+      "./assets/fonts/"
+    ]
   }
 }
